--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transisi</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -18,15 +19,9 @@
     </script>
   </head>
   <body>
-    <div
-      class="w-full h-screen bg-gray-200 flex justify-center items-center"
-      id="main-container"
-    >
-      <div
-        class="w-3/4 h-3/4 flex p-5 rounded-lg bg-dark"
-        id="second-container"
-      >
-        <div class="w-2/4 h-full">
+    <div class="main-container">
+      <div class="second-container">
+        <div class="left-content-container">
           <div class="w-full h-1/6 flex">
             <div
               class="w-8 h-8 rounded-lg bg-white/30 flex justify-center items-center"
@@ -78,7 +73,7 @@
           </div>
           <div class="w-full h-3/6 bg-green-500 px-16"></div>
         </div>
-        <div class="w-2/4 h-full bg-white rounded-lg"></div>
+        <div class="right-content-container"></div>
       </div>
     </div>
   </body>
