--- a/index.html
+++ b/index.html
@@ -6,26 +6,13 @@
     <title>Transisi</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            backgroundImage: {
-              dark: "url('./asset/background-dark.png')",
-            },
-          },
-        },
-      };
-    </script>
   </head>
   <body>
     <div class="main-container">
       <div class="second-container">
         <div class="left-content-container">
-          <div class="w-full h-1/6 flex">
-            <div
-              class="w-8 h-8 rounded-lg bg-white/30 flex justify-center items-center"
-            >
+          <div class="top-left-content">
+            <div class="list-button">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -42,7 +29,7 @@
               </svg>
             </div>
           </div>
-          <div class="w-full h-2/6 px-14">
+          <div class="mid-left-content">
             <p class="text-3xl font-semibold text-white">Hi Samantha</p>
             <p class="text-sm text-white/40">
               Welcome back to workpspace, we miss You!
