--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
             </div>
           </div>
           <div class="mid-left-content">
-            <p class="text-3xl font-semibold text-white">Hi Samantha</p>
-            <p class="text-sm text-white/40">
-              Welcome back to workpspace, we miss You!
-            </p>
-            <div class="relative w-full">
+            <p class="hi-name">Hi Samantha</p>
+            <p class="headline">Welcome back to workpspace, we miss You!</p>
+            <div class="search-box">
               <input
                 type="text"
-                class="w-full mt-5 p-3 pl-10 bg-white/20 rounded-lg focus:outline-none text-sm text-white"
+                class="search-input"
                 placeholder="Search Task or Project..."
               />
-              <div class="absolute left-3 top-8">
+              <div class="search-icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -58,7 +56,7 @@
               </div>
             </div>
           </div>
-          <div class="w-full h-3/6 bg-green-500 px-16"></div>
+          <div class="bottom-left-content"></div>
         </div>
         <div class="right-content-container"></div>
       </div>
