--- a/index.html
+++ b/index.html
@@ -56,7 +56,24 @@
               </div>
             </div>
           </div>
-          <div class="bottom-left-content"></div>
+          <div class="bottom-left-content">
+            <div class="flex gap-2 items-center pt-4 pb-2">
+              <p class="text-white font-semibold text-lg">Projects</p>
+              <p class="text-white/30">(13)</p>
+            </div>
+            <div class="w-full space-y-5">
+              <div class="w-full flex items-center justify-between">
+                <div class="flex flex-col items-center space-y-2">
+                  <button
+                    class="w-16 h-16 rounded-lg text-white font-bold text-lg bg-gradient-to-r from-purple-500 to-pink-500"
+                  >
+                    GH
+                  </button>
+                  <p class="text-xs text-white/50">Green House</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="right-content-container"></div>
       </div>
