--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="search-box">
               <input
                 type="text"
+                lg
                 class="search-input"
                 placeholder="Search Task or Project..."
               />
@@ -62,14 +63,55 @@
               <p class="text-white/30">(13)</p>
             </div>
             <div class="w-full space-y-5">
-              <div class="w-full flex items-center justify-between">
+              <div class="w-full flex justify-between">
                 <div class="flex flex-col items-center space-y-2">
                   <button
-                    class="w-16 h-16 rounded-lg text-white font-bold text-lg bg-gradient-to-r from-purple-500 to-pink-500"
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-red-400 to-pink-500"
                   >
                     GH
                   </button>
                   <p class="text-xs text-white/50">Green House</p>
+                </div>
+                <div class="flex flex-col items-center space-y-2">
+                  <button
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-green-500 to-blue-500"
+                  >
+                    CP
+                  </button>
+                  <p class="text-xs text-white/50">Cyber Punk</p>
+                </div>
+                <div class="flex flex-col items-center space-y-2">
+                  <button
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-pink-500 to-purple-500"
+                  >
+                    EC
+                  </button>
+                  <p class="text-xs text-white/50">Easy Crypto</p>
+                </div>
+              </div>
+              <div class="w-full flex justify-between">
+                <div class="flex flex-col items-center space-y-2">
+                  <button
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-purple-500 to-blue-500"
+                  >
+                    TA
+                  </button>
+                  <p class="text-xs text-white/50">Travel App</p>
+                </div>
+                <div class="flex flex-col items-center space-y-2">
+                  <button
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-orange-300 to-orange-600"
+                  >
+                    LP
+                  </button>
+                  <p class="text-xs text-white/50">Landing Page</p>
+                </div>
+                <div class="flex flex-col">
+                  <button
+                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gray-600"
+                  >
+                    8+
+                  </button>
                 </div>
               </div>
             </div>
