--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <div class="search-box">
               <input
                 type="text"
-                lg
                 class="search-input"
                 placeholder="Search Task or Project..."
               />
@@ -58,60 +57,36 @@
             </div>
           </div>
           <div class="bottom-left-content">
-            <div class="flex gap-2 items-center pt-4 pb-2">
-              <p class="text-white font-semibold text-lg">Projects</p>
-              <p class="text-white/30">(13)</p>
+            <div class="content-headline">
+              <p class="text-headline">Projects</p>
+              <p class="second-text-headline">(13)</p>
             </div>
-            <div class="w-full space-y-5">
-              <div class="w-full flex justify-between">
-                <div class="flex flex-col items-center space-y-2">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-red-400 to-pink-500"
-                  >
-                    GH
-                  </button>
-                  <p class="text-xs text-white/50">Green House</p>
+            <div class="content-menu">
+              <div class="menu">
+                <div class="menu-box">
+                  <button class="menu-button" id="menu-1">GH</button>
+                  <p class="menu-title">Green House</p>
                 </div>
-                <div class="flex flex-col items-center space-y-2">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-green-500 to-blue-500"
-                  >
-                    CP
-                  </button>
-                  <p class="text-xs text-white/50">Cyber Punk</p>
+                <div class="menu-box">
+                  <button class="menu-button" id="menu-2">CP</button>
+                  <p class="menu-title">Cyber Punk</p>
                 </div>
-                <div class="flex flex-col items-center space-y-2">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-pink-500 to-purple-500"
-                  >
-                    EC
-                  </button>
-                  <p class="text-xs text-white/50">Easy Crypto</p>
+                <div class="menu-box">
+                  <button class="menu-button" id="menu-3">EC</button>
+                  <p class="menu-title">Easy Crypto</p>
                 </div>
               </div>
-              <div class="w-full flex justify-between">
-                <div class="flex flex-col items-center space-y-2">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-purple-500 to-blue-500"
-                  >
-                    TA
-                  </button>
-                  <p class="text-xs text-white/50">Travel App</p>
+              <div class="menu" id="b-menu">
+                <div class="menu-box">
+                  <button class="menu-button" id="menu-4">TA</button>
+                  <p class="menu-title">Travel App</p>
                 </div>
-                <div class="flex flex-col items-center space-y-2">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gradient-to-tr from-orange-300 to-orange-600"
-                  >
-                    LP
-                  </button>
-                  <p class="text-xs text-white/50">Landing Page</p>
+                <div class="menu-box">
+                  <button class="menu-button" id="menu-5">LP</button>
+                  <p class="menu-title">Landing Page</p>
                 </div>
-                <div class="flex flex-col">
-                  <button
-                    class="w-16 h-16 rounded-xl text-white font-bold text-lg bg-gray-600"
-                  >
-                    8+
-                  </button>
+                <div class="menu-box-etc">
+                  <button class="menu-button" id="menu-6">8+</button>
                 </div>
               </div>
             </div>
