--- a/index.html
+++ b/index.html
@@ -92,7 +92,81 @@
             </div>
           </div>
         </div>
-        <div class="right-content-container"></div>
+        <div class="right-content-container">
+          <div class="content-right-top">
+            <div class="headline-right">
+              <div class="headline-box">
+                <p class="headline-big">Cyber Punk</p>
+                <p class="title-line">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt.
+                </p>
+              </div>
+            </div>
+            <div class="left">
+              <div class="profile">
+                <div class="pp">
+                  <div class="pp-badge" id="badge-1"></div>
+                  <div class="pp-badge" id="badge-2"></div>
+                  <div class="pp-badge" id="badge-3"></div>
+                </div>
+                <div class="add-pp">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 text-gray-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="content-list">
+            <div class="head-list">
+              <p class="list-title">Today</p>
+              <div class="ic-more">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-6 h-6 text-gray-400"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="list">
+              <div class="item">
+                <div class="title-list flex items-center gap-2">
+                  <label class="check text-xs text-gray-500 flex items-center"
+                    >This is first hjash jkaskdj
+                    <input type="checkbox" checked="checked" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div
+                  class="badge-list w-20 py-0.5 bg-green-500/30 text-xs flex items-center justify-center rounded-full text-green-500"
+                >
+                  Proccess
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
