--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <div class="item">
                 <div class="title-list flex items-center gap-2">
                   <label class="check text-xs text-gray-500 flex items-center"
-                    >This is first hjash jkaskdj
+                    >Create initial layout for homepage
                     <input type="checkbox" checked="checked" />
                     <span class="checkmark"></span>
                   </label>
@@ -161,7 +161,7 @@
                 <div
                   class="badge-list w-20 py-0.5 bg-green-500/30 text-xs flex items-center justify-center rounded-full text-green-500"
                 >
-                  Proccess
+                  Approved
                 </div>
               </div>
             </div>
