--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class="menu-box">
                   <button class="menu-button" id="menu-3">EC</button>
                   <p class="menu-title">Easy Crypto</p>
+                  <div class="white-badge"></div>
                 </div>
               </div>
               <div class="menu" id="b-menu">
@@ -84,6 +85,7 @@
                 <div class="menu-box">
                   <button class="menu-button" id="menu-5">LP</button>
                   <p class="menu-title">Landing Page</p>
+                  <div class="white-badge"></div>
                 </div>
                 <div class="menu-box-etc">
                   <button class="menu-button" id="menu-6">8+</button>
@@ -151,20 +153,84 @@
             </div>
             <div class="list">
               <div class="item">
-                <div class="title-list flex items-center gap-2">
-                  <label class="check text-xs text-gray-500 flex items-center"
+                <div class="title-list">
+                  <label class="check"
                     >Create initial layout for homepage
                     <input type="checkbox" checked="checked" />
                     <span class="checkmark"></span>
                   </label>
                 </div>
-                <div
-                  class="badge-list w-20 py-0.5 bg-green-500/30 text-xs flex items-center justify-center rounded-full text-green-500"
-                >
-                  Approved
+                <div class="status-badge" id="approved">Approved</div>
+              </div>
+              <div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >Fixing icon with transparant background
+                    <input type="checkbox" checked="checked" />
+                    <span class="checkmark"></span>
+                  </label>
                 </div>
+                <div class="status-badge" id="inprogress">In Progress</div>
+              </div>
+              <div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >Fixing icon with transparant background
+                    <input type="checkbox" checked="checked" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="status-badge" id="inprogress">In Progress</div>
+              </div>
+              <div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >Create initial layout for homepage
+                    <input type="checkbox" checked="checked" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="status-badge" id="inprogress">In Progress</div>
+              </div>
+              <div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >Discussions regrading workflow improvement
+                    <input type="checkbox" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="status-badge" id="inreview">In Review</div>
+              </div>
+              <div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >Creating question for app redesign project
+                    <input type="checkbox" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="status-badge" id="waiting">Waiting</div>
               </div>
             </div>
+          </div>
+          <div class="add-button-box">
+            <button class="add-button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                class="w-5 h-5"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 4.5v15m7.5-7.5h-15"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
