--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </svg>
               </div>
             </div>
-            <div class="list">
+            <div class="list" id="list">
               <div class="item">
                 <div class="title-list">
                   <label class="check"
@@ -215,7 +215,7 @@
             </div>
           </div>
           <div class="add-button-box">
-            <button class="add-button">
+            <button class="add-button" id="add-input">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -235,5 +235,55 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script language="JavaScript">
+      let dataRow = 0;
+      $("#add-input").click(() => {
+        dataRow++;
+        inputRow(dataRow);
+      });
+
+      var r_text = new Array();
+      r_text[0] = "Create initial layout for homepage";
+      r_text[1] = "Fixing icon with transparant background";
+      r_text[2] = "Discussions regrading workflow improvement";
+      r_text[3] = "Creating question for app redesign project";
+      var j = Math.floor(4 * Math.random());
+      var randomText = r_text[j];
+
+      var r_status = new Array();
+      r_status[0] = "waiting";
+      r_status[1] = "inprogress";
+      r_status[2] = "inreview";
+      r_status[3] = "approved";
+      var k = Math.floor(4 * Math.random());
+      var randomStatus = r_status[k];
+
+      inputRow = (i) => {
+        let tr = `<div class="item">
+                <div class="title-list">
+                  <label class="check"
+                    >${randomText}
+                    <input type="checkbox" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="status-badge" id="${randomStatus}">${
+          randomStatus === "waiting"
+            ? "Waiting"
+            : randomStatus === "inprogress"
+            ? "In Progress"
+            : randomStatus === "inreview"
+            ? "In Review"
+            : randomStatus === "approved" && "Approved"
+        }</div>
+              </div>`;
+        $("#list").append(tr);
+      };
+    </script>
   </body>
 </html>
